--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -12,123 +12,130 @@
 }
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+        <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
             <p>
-                @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
+                @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-default"})
             </p>
         </div>
 
-        <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+        <div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
             <p>
                 @using (Html.BeginForm("Index", "Employees", FormMethod.Get))
                 {
-
-                    <b>Search</b>
-                    @Html.TextBox("searchTextEmpName")
-                    <input type="submit" value="Search" />
-
+                    <b>Search by (Name/Contact/NID/Email/DL/Organization/Designation/Department) </b>
+                    @Html.TextBox("searchText")
+                    <input type="submit" value="Search"/>
                 }
             </p>
         </div>
     </div>
 </div>
-<br />
-
+<br/>
 <table class="table table-bordered table-active table-striped">
     <tr>
         <th>
             SL
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Department)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Designation)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Organization)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.FullName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.OrganizationId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DepartmentId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DesignationId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ContactNo)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NID)
+            @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BloodGroup)
+            @Html.DisplayNameFor(model => model.NID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DrivingLicence)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.BloodGroup)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.EmployeeTypes)
         </th>
-        <th></th>
+        <th>
+            Action
+        </th>
     </tr>
-@{
-    var sl = 0;
-    if (Model.Count()!=0)
-    {
-        foreach (var item in Model)
+    @{
+        var sl = 0;
+        if (Model.Count() != 0)
         {
-            sl++;
+            foreach (var item in Model)
+            {
+                sl++;
+                <tr>
+                    <td>
+                        @sl
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Organization.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Department.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Designation.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ContactNo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NID)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DrivingLicence)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BloodGroup)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EmployeeTypes)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
             <tr>
-                <td>
-                    @sl
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Department.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Designation.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Organization.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContactNo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BloodGroup)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DrivingLicence)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmployeeTypes)
-                </td>
-                
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                </td>
+                <td class="text-center text-danger" colspan="12"> Data Not Found!</td>
             </tr>
         }
     }
-    else
-    {
-        <tr>
-            <td class="text-center text-danger" colspan="16"> Data Not Found!</td>
-        </tr>
-    }
-}
-
 
 </table>
+
+
+
+
+
+
+
+
+
+
+
