--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -86,12 +86,13 @@
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                 <div class="form-group row">
-                    @Html.Label("RequisitionId", htmlAttributes: new { @class = "control -label col-md-3" })
+                    @Html.Label("RequisitionId", htmlAttributes: new {@class = "control -label col-md-3"})
                     <div class="col-md-4">
-                        @Html.TextBox("RequisitionId", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
-                        @Html.ValidationMessage("RequisitionId", "", new { @class = "text-danger" })
+                        @Html.TextBox("RequisitionId", null, htmlAttributes: new {@class = "form-control", @readonly = "readonly"})
+                        @Html.ValidationMessage("RequisitionId", "", new {@class = "text-danger"})
                     </div>
                 </div>
+
 
                 <div class="form-group row">
                     @Html.Label("RequisitionStatusId", htmlAttributes: new { @class = "control-label col-md-3" })
@@ -102,18 +103,24 @@
                 </div>
 
                 <div class="form-group row">
-                    @Html.Label("RequisitionNumber", htmlAttributes: new { @class = "control-label col-md-3" })
+                    @Html.Label("RequisitionNumber", htmlAttributes: new {@class = "control-label col-md-3"})
                     <div class="col-md-4">
-                        @Html.TextBox("RequisitionNumber", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
-                        @Html.ValidationMessage("RequisitionNumber", "", new { @class = "text-danger" })
+                        @Html.TextBox("RequisitionNumber", null, htmlAttributes: new {@class = "form-control", @readonly = "readonly"})
+                        @Html.ValidationMessage("RequisitionNumber", "", new {@class = "text-danger"})
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    @Html.Label("VehicleType", htmlAttributes: new { @class = "control-label col-md-3" })
+                    <div class="col-md-4">
+                        @Html.DropDownList("VehicleType", new SelectList(Model.VehicleTypes, "Id", "Name"), "Select...", htmlAttributes: new { @class = "dropdown form-control", id = "vehicleTypeDD" })
                     </div>
                 </div>
 
                 <div class="form-group row">
                     @Html.Label("VehicleId", htmlAttributes: new { @class = "control-label col-md-3" })
                     <div class="col-md-4">
-                        @Html.DropDownList("VehicleId", null, "Select", htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessage("VehicleId", "", new { @class = "text-danger" })
+                        @Html.DropDownList("VehicleId", null, htmlAttributes: new { @class = "dropdown form-control", id = "vehicleDD" })
                     </div>
                 </div>
 
@@ -138,4 +145,5 @@
 
         @section Scripts {
             @Scripts.Render("~/bundles/jqueryval")
+            <script src="~/Scripts/AssignRequisitionJs/AssignRequisitionCreateJs.js"></script>
         }
