--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -168,13 +168,13 @@
                             </div>
                         </div>
                         
-                        <div class="form-group row">
+                        @*<div class="form-group row">
                             @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
                                 @Html.DropDownList("EmployeeId", null, "Select", htmlAttributes: new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
                             </div>
-                        </div>
+                        </div>*@
 
                         <div class="form-group row">
                             <div class="col-md-3"></div>
