--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model RMS.App.ViewModels.RequisitionViewModel
+﻿@using Microsoft.Ajax.Utilities
+@model RMS.App.ViewModels.RequisitionViewModel
 
 @{
     ViewBag.Title = "Edit Requisition";
@@ -90,10 +91,10 @@
                     @Html.ValidationMessageFor(model => model.PassengerQty, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="form-group row" hidden="hidden">
+            <div class="form-group row" @*hidden="hidden"*@>
                 @Html.LabelFor(model => model.SubmitDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.SubmitDateTime, new { htmlAttributes = new { @class = "form-control",@readOnly="readonly" } })
+                    @Html.EditorFor(model => model.SubmitDateTime, new { htmlAttributes = new { @class = "form-control", @readonly="readonly" } })
                     @Html.ValidationMessageFor(model => model.SubmitDateTime, "", new { @class = "text-danger" })
                 </div>
             </div>
